--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,89 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DKB!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="100dp"
+        android:fontFamily="serif-monospace"
+        android:text="@string/app_name"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/product_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="@string/product_desc"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/app_name" />
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/product_desc">
+
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="150dp"
+            android:columnCount="2"
+            android:rowCount="3">
+
+            <Button
+                android:id="@+id/btn_msg1"
+                android:layout_margin="32dp"
+                android:background="@drawable/rounded_btn"
+                android:padding="16dp"
+                android:text="Message 1" />
+
+            <Button
+                android:id="@+id/btn_msg2"
+                android:layout_margin="32dp"
+                android:background="@drawable/rounded_btn"
+                android:padding="16dp"
+                android:text="Message 2" />
+
+            <Button
+                android:id="@+id/btn_msg3"
+                android:layout_margin="32dp"
+                android:background="@drawable/rounded_btn"
+                android:padding="16dp"
+                android:text="Message 3" />
+
+            <Button
+                android:id="@+id/btn_msg4"
+                android:layout_margin="32dp"
+                android:background="@drawable/rounded_btn"
+                android:padding="16dp"
+                android:text="Message 4" />
+
+            <Button
+                android:id="@+id/btn_msg5"
+                android:layout_margin="32dp"
+                android:background="@drawable/rounded_btn"
+                android:padding="16dp"
+                android:text="Message 5" />
+
+            <Button
+                android:id="@+id/btn_msg6"
+                android:layout_margin="32dp"
+                android:background="@drawable/rounded_btn"
+                android:padding="16dp"
+                android:text="Message 6" />
+
+        </GridLayout>
+
+    </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
